--- a/public/css/eliminar.css
+++ b/public/css/eliminar.css
@@ -92,6 +92,15 @@ body {
     background-color: #e7e7e7;
     position: center;
     padding: 12px 16px 12px 16px;
+    margin-top: -100px;
+        border-radius: 4px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+
 }
 
 .texto-boton{
@@ -101,4 +110,5 @@ body {
 .item:hover {
    text-decoration: underline;
   text-decoration-color: black;
+  background-color: red;
 }
